<resources>
    <string name="app_name">Mume</string>
    <string name="next">Next</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="playlist">Playlist</string>
    <string name="settings">Settings</string>
    <string name="get_started">Get started</string>
    <string name="playlists">Playlists</string>
    <string name="_14_playlists">14 playlists</string>
    <string name="recently_added">Recently added</string>
    <string name="add_new_playlist">Add New Playlist</string>
    <string name="no_playlist_yet">No playlist yet</string>
    <string name="new_playlist">New Playlist</string>
    <string name="enter_playlist_name">Enter playlist name</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="date_added">Date Added</string>
    <string name="add_songs">Add Songs</string>
    <string name="songs">Songs</string>
    <string name="shuffle">Shuffle</string>
</resources>