<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#1F222A"
    android:padding="@dimen/margin_standard">

    <TextView
        android:id="@+id/tv_new_playlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/new_playlist"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="@dimen/margin_standard"
        android:background="#36383F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_new_playlist" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_new_playlist"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_standard"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_playlist_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#181A20"
            android:hint="@string/enter_playlist_name"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/line_second"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="@dimen/margin_standard"
        android:background="#36383F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_new_playlist" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_standard"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_second">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:backgroundTint="#36383F"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="24dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_create"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/create"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint="@color/app_color"
            app:cornerRadius="24dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>