<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_standard"
            android:text="@string/playlists"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_search"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="@dimen/margin_standard"
            android:padding="@dimen/margin_middle"
            android:src="@drawable/search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_playlist_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_standard"
        android:text="@string/_14_playlists"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_sort_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_sort_type" />

    <TextView
        android:id="@+id/tv_sort_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_standard"
        android:text="@string/recently_added"
        android:textColor="@color/app_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_sort"
        app:layout_constraintEnd_toStartOf="@id/iv_sort"
        app:layout_constraintTop_toTopOf="@id/iv_sort" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_sort"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginVertical="@dimen/margin_middle"
        android:layout_marginEnd="@dimen/margin_standard"
        android:padding="@dimen/margin_middle"
        android:src="@drawable/ic_import_export"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/margin_standard"
        android:background="#52FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_sort" />

    <!--    <LinearLayout-->
    <!--        android:id="@+id/container_add_new_playlist"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="horizontal"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/line">-->

    <!--        <com.google.android.material.imageview.ShapeableImageView-->
    <!--            android:layout_width="75dp"-->
    <!--            android:layout_height="75dp"-->
    <!--            android:layout_margin="@dimen/margin_standard"-->
    <!--            android:background="@color/app_color"-->
    <!--            android:src="@drawable/ic_add"-->
    <!--            app:contentPadding="@dimen/margin_standard"-->
    <!--            app:shapeAppearanceOverlay="@style/ShapeImageArtist" />-->

    <!--        <TextView-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_gravity="center_vertical"-->
    <!--            android:text="@string/add_new_playlist"-->
    <!--            android:textColor="@color/white"-->
    <!--            android:textSize="20sp" />-->

    <!--    </LinearLayout>-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_playlists"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add"
        app:tint="@color/white" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_playlist_yet"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/rv_playlists"
        app:layout_constraintEnd_toEndOf="@id/rv_playlists"
        app:layout_constraintStart_toStartOf="@id/rv_playlists"
        app:layout_constraintTop_toTopOf="@id/rv_playlists" />

</androidx.constraintlayout.widget.ConstraintLayout>